Fix the bug caused the layout to collapse on Obsidian v1.7.4

--- a/styles.scss
+++ b/styles.scss
@@ -1,7 +1,8 @@
 @import './node_modules/vanillajs-datepicker/sass/datepicker';
 
 .modal.date-inserter-modal {
-    width: 300px;
+    width: 340px;
+	height: 388px;
 
     .datepicker-view {
         color: #000;
